Some fixing in the Hero and About seciton - layout, spacing, sizing etc.

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ nav ul li a:hover {
 /* Styles for Hero Section */
 #hero-section {
   background-color: var(--bg-color);
-  padding: 200px 0 0 0;
+  padding: 100px 0 0 0;
   background-image: url("./assets/images/half-circle-shap.png");
   background-position: right bottom;
   background-size: 1000px;
@@ -96,6 +96,7 @@ nav ul li a:hover {
 #hero-section h1 {
   font-size: 64px;
   font-weight: 700;
+  margin-bottom: 30px;
   line-height: 72px;
   color: var(--dark-color);
 }
@@ -103,6 +104,7 @@ nav ul li a:hover {
   font-size: 40px;
   font-weight: 500;
   display: block;
+  margin-bottom: 20px;
   line-height: 48px;
 }
 #hero-section p {
@@ -113,6 +115,7 @@ nav ul li a:hover {
   display: flex;
   justify-content: start;
   gap: 25px;
+  margin-top: 70px;
   align-items: center;
 }
 #hero-section .btn.btn-2 {
@@ -125,7 +128,8 @@ nav ul li a:hover {
   margin-right: 7px;
 }
 #hero-section .hero-right-content img {
-  width: 600px;
+  width: 550px;
+  margin-top: 70px;
 }
 
 #hero-section .hero-right-content {
@@ -139,7 +143,7 @@ nav ul li a:hover {
   top: 50%;
   left: -150px;
   transform: translateY(-50%) rotate(-90deg);
-  font-size: 104px;
+  font-size: 94px;
   letter-spacing: 20px;
   font-weight: 800;
   color: var(--text-color);
@@ -179,9 +183,9 @@ nav ul li a:hover {
   color: var(--text-color);
 }
 #about-section ul p {
-  font-size: 16px;
-  padding: 5px 0 0 0;
-  font-weight: 500;
+  font-size: 18px;
+  padding: 7px 0 0 0;
+  font-weight: 600;
   width: 100%;
   color: var(--dark-color);
 }
